syntax = "proto3";

package sfc_invite;

import "Models/Common/pagination.proto";
import "Models/Common/sorting.proto";
import "Messages/Find/Filters/get_invites_filter.proto";

option csharp_namespace = "SFC.Invite.Contracts.Messages.Find";

message GetInvitesRequest
{
    Pagination pagination = 1;
    repeated Sorting sorting = 2;
    GetInvitesFilter filter = 3;
}