syntax = "proto3";

package sfc_invite;

import "Messages/Get/get_invite_request.proto";
import "Messages/Get/get_invite_response.proto";
import "Messages/Find/get_invites_request.proto";
import "Messages/Find/get_invites_response.proto";

option csharp_namespace = "SFC.Invite.Contracts.Services";

service InviteService {
    rpc GetInvite(GetInviteRequest) returns (GetInviteResponse);
    rpc GetInvites(GetInvitesRequest) returns (GetInvitesResponse);
}